tests/typing/bad/testfile-assign-25.c

int main() { int x, y; y = ++x = 1; }
